# miranda-ng

./: .gitignore  .gitmodules  1.bat  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GitExtensions.settings  ISSUE_TEMPLATE.md  Makefile  README.md  README.txt  cleaner.bat  cleaner.bat - Ярлык.lnk  copylib.cmd  copylibapp.cmd  copylibjson.cmd  copylibs_bin14.cmd  copylibtd.cmd  git_read.cmd  make_core_def.cmd  make_core_def_bin14.cmd  zzReport.txt
libs/freeimage/: CMakeLists.txt  freeimage.vcxproj  freeimage.vcxproj.filters
libs/libevent/: CMakeLists.txt  libevent.vcxproj  libevent.vcxproj.filters  libevent_12.vcxproj  libevent_12.vcxproj.filters
plugins/AdvaImg/: AdvaImg.vcxproj  AdvaImg_10.vcxproj  AdvaImg_10.vcxproj.filters  AdvaImg_11.vcxproj  AdvaImg_11.vcxproj.filters  AdvaImg_12.vcxproj  AdvaImg_12.vcxproj.filters  AdvaImg_14.vcxproj  AdvaImg_15.vcxproj  AdvaImg_15.vcxproj.filters  CMakeLists.txt
plugins/Db3x_mmap/: CMakeLists.txt  commonheaders.h  database.c  database.cpp  database.h  db3x_mmap-translation.txt  db3x_mmap.rc  db3x_mmap.vcxproj  db3x_mmap.vcxproj.filters  db3x_mmap_10.vcxproj  db3x_mmap_10.vcxproj.filters  db3x_mmap_11.vcxproj  db3x_mmap_11.vcxproj.filters  db3x_mmap_12.vcxproj  db3x_mmap_12.vcxproj.filters  dbcache.c  dbcache.cpp  dbcontacts.c  dbcontacts.cpp  dbevents.c  dbevents.cpp  dbheaders.cpp  dbintf.cpp  dbintf.h  dbmodulechain.cpp  dbsettings.c  dbsettings.cpp  encryption.h  init.c  init.cpp  version.rc
protocols/: CMakeLists.txt
protocols/AimOscar/: CMakeLists.txt  Makefile  aim.cpp  aim.dev  aim.dsw  aim.h  aim.rc  aim.vcxproj  aim_10.vcxproj  aim_10.vcxproj.filters  aim_11.vcxproj  aim_12.vcxproj  aim_7.sln  aim_7.vcproj  aim_8.sln  aim_8.vcproj  aim_9.vcproj  aimoscar.dep  aimoscar.dsp  aimoscar.mak  away.cpp  client.cpp  connection.cpp  conv.cpp  conv.h  defines.h  direct_connect.cpp  direct_connect.h  error.cpp  file.cpp  file.h  flap.cpp  flap.h  links.cpp  links.h  m_folders.h  proto.cpp  proto.h  server.cpp  services.cpp  (+9 more)
protocols/CloudFile/: CloudFile.vcxproj  CloudFile.vcxproj.filters
protocols/ConnectionNotify/: ConnectionNotify.vcxproj  ConnectionNotify.vcxproj.filters
protocols/CurrencyRates/: Forex.vcxproj  Forex.vcxproj.filters
protocols/DeltaChat/: deltachat.vcxproj  deltachat.vcxproj.filters
protocols/Discord/: CMakeLists.txt  discord.vcxproj  discord.vcxproj.filters
protocols/Dummy/: CMakeLists.txt  dummy.vcxproj  dummy.vcxproj.filters  dummy_10.vcxproj  dummy_12.vcxproj  dummy_12.vcxproj.filters
protocols/EmLanProto/: CMakeLists.txt  amdproto.vcxproj  amdproto_10.vcxproj  amdproto_10.vcxproj.filters  amdproto_11.vcxproj  amdproto_11.vcxproj.filters  amdproto_12.vcxproj  amdproto_14.vcxproj  amdproto_15.vcxproj  amdproto_15.vcxproj.filters  emlanproto.vcxproj  emlanproto.vcxproj.filters
protocols/Facebook/: facebook.vcxproj  facebook.vcxproj.filters
protocols/FacebookRM/: CMakeLists.txt  avatars.cpp  chat.cpp  client.h  common.h  communication.cpp  connection.cpp  constants.h  contacts.cpp  db.h  definitions.h  dialogs.cpp  entities.h  events.cpp  facebook.rc  facebook.vcxproj  facebook.vcxproj.filters  facebook_10.sln  facebook_10.vcxproj  facebook_10.vcxproj.filters  facebook_11.vcxproj  facebook_11.vcxproj.filters  facebook_12.vcxproj  facebook_12.vcxproj.filters  json.cpp  json.h  kdjfg  list.hpp  main.cpp  messages.cpp  process.cpp  proto.cpp  proto.h  resource.h  stubs.cpp  theme.cpp  theme.h  utils.cpp  utils.h
protocols/GTalkExt/: GTalkExt.cpp  GTalkExt.dep  GTalkExt.dsp  GTalkExt.dsw  GTalkExt.mak  GTalkExt.sln  GTalkExt.vcproj  GTalkExt.vcxproj  GTalkExt.vcxproj.filters  GTalkExt_10.vcxproj  GTalkExt_10.vcxproj.filters  GTalkExt_11.vcxproj  GTalkExt_11.vcxproj.filters  GTalkExt_12.vcxproj  GTalkExt_12.vcxproj.filters  avatar.cpp  db.cpp  db.h  handlers.cpp  handlers.h  inbox.cpp  inbox.h  menu.cpp  notifications.cpp  options.cpp  options.h  popups.cpp  popups.h  stdafx.cpp  stdafx.h  targetver.h  tipper_items.h
protocols/Gadu-Gadu/: CMakeLists.txt  Gadu-Gadu.dep  Gadu-Gadu.dsp  Gadu-Gadu.dsw  Gadu-Gadu.mak  Gadu-Gadu.vcproj  Gadu-Gadu_10.vcxproj  Gadu-Gadu_10.vcxproj.filters  Gadu-Gadu_11.vcxproj  Gadu-Gadu_11.vcxproj.filters  Gadu-Gadu_12.vcxproj  Gadu-Gadu_14.vcxproj  Gadu-Gadu_14.vcxproj.filters  Gadu-Gadu_15.vcxproj  Gadu-Gadu_15.vcxproj.filters  Gadu-Gadu_8.vcproj  Gadu-Gadu_9.vcproj  avatar.c  avatar.cpp  core.c  core.cpp  dialogs.c  dialogs.cpp  dynstuff.c  dynstuff.cpp  dynstuff.h  filetransfer.c  filetransfer.cpp  gadugadu.vcxproj  gadugadu.vcxproj.filters  gg.c  gg.cpp  gg.h  gg_proto.cpp  gg_proto.h  groupchat.c  groupchat.cpp  icolib.c  image.c  image.cpp  (+20 more)
protocols/GmailNotifier/: GmailNotifier.vcxproj  GmailNotifier.vcxproj.filters
protocols/ICQ-WIM/: CMakeLists.txt  ICQ-WIM.vcxproj  ICQ-WIM.vcxproj.filters
protocols/ICQCorp/: CMakeLists.txt  ICQCorp.vcxproj  ICQCorp.vcxproj.filters  ICQCorp_10.vcxproj  ICQCorp_12.vcxproj  ICQCorp_12.vcxproj.filters  ICQCorp_14.vcxproj  ICQCorp_15.vcxproj  ICQCorp_15.vcxproj.filters
protocols/IRCG/: CMakeLists.txt  IRC.dep  IRC.dsp  IRC.dsw  IRC.mak  IRC.rc  IRC.vcproj  IRC.vcxproj  IRC.vcxproj.filters  IRC_10.vcxproj  IRC_10.vcxproj.filters  IRC_11.vcxproj  IRC_11.vcxproj.filters  IRC_12.vcxproj  IRC_12.vcxproj.filters  IRC_8.vcproj  IRC_9.vcproj  MString.cpp  MString.h  clist.cpp  commandmonitor.cpp  commandmonitor.h  input.cpp  irc.h  irclib.cpp  irclib.h  ircproto.cpp  m_uninstaller.h  main.cpp  options.cpp  output.cpp  resource.h  resource.rc  scripting.cpp  services.cpp  tools.cpp  ui_utils.cpp  ui_utils.h  userinfo.cpp  version.h  (+2 more)
protocols/Icq10/: icq10.vcxproj
protocols/IcqOscarJ/: CMakeLists.txt  capabilities.cpp  capabilities.h  chan_01login.cpp  chan_02data.cpp  chan_03error.cpp  chan_04close.cpp  chan_05ping.cpp  channels.h  cookies.cpp  cookies.h  directpackets.cpp  directpackets.h  fam_01service.cpp  fam_02location.cpp  fam_03buddy.cpp  fam_04message.cpp  fam_09bos.cpp  fam_0alookup.cpp  fam_0bstatus.cpp  fam_13servclist.cpp  fam_15icqserver.cpp  fam_17signon.cpp  families.h  globals.h  guids.h  i18n.cpp  i18n.h  (+76 more)
(+32459 files in other folders)
