#add_subdirectory(AimOscar)
#add_subdirectory(Discord)
#add_subdirectory(Dummy)
#add_subdirectory(EmLanProto)
add_subdirectory(FacebookRM)
#add_subdirectory(Gadu-Gadu)
#add_subdirectory(ICQCorp)
add_subdirectory(IcqOscarJ)
add_subdirectory(IRCG)
add_subdirectory(JabberG)
#add_subdirectory(MinecraftDynmap)
#add_subdirectory(MRA)
add_subdirectory(MSN)
#add_subdirectory(Omegle)
#add_subdirectory(Sametime)
add_subdirectory(SkypeWeb)
#add_subdirectory(Slack)
add_subdirectory(Steam)
#add_subdirectory(Telegram)
#add_subdirectory(Tlen)
#add_subdirectory(Tox)
add_subdirectory(Twitter)
add_subdirectory(VKontakte)
#add_subdirectory(WhatsApp)