#add_subdirectory(Dummy)
#add_subdirectory(EmLanProto)
add_subdirectory(Facebook)
#add_subdirectory(Gadu-Gadu)
#add_subdirectory(ICQCorp)
add_subdirectory(IRCG)
add_subdirectory(JabberG)
#add_subdirectory(MinecraftDynmap)
#add_subdirectory(Sametime)
add_subdirectory(Steam)
#add_subdirectory(Tox)
#add_subdirectory(Twitter)
#add_subdirectory(VKontakte)