file(GLOB SOURCES "src/*.h"
"src/FreeImage/*.h"
"src/FreeImageToolkit/*.h"
"src/LibJPEG/*.h"
"src/LibPNG/*.h"
"src/Metadata/*.h"

"src/FreeImageToolkit/Background.cpp"
"src/FreeImage/BitmapAccess.cpp"
"src/FreeImage/ColorLookup.cpp"
"src/FreeImage/ConversionFloat.cpp"
"src/FreeImage/ConversionRGB16.cpp"
"src/FreeImage/ConversionRGBA16.cpp"
"src/FreeImage/ConversionRGBAF.cpp"
"src/FreeImage/ConversionUINT16.cpp"
"src/FreeImage/FreeImage.cpp"
"src/FreeImage/FreeImageIO.cpp"
"src/FreeImage/GetType.cpp"
"src/FreeImage/LFPQuantizer.cpp"
"src/FreeImage/MemoryIO.cpp"
"src/FreeImage/PixelAccess.cpp"
"src/FreeImage/Plugin.cpp"
"src/FreeImage/PluginBMP.cpp"
"src/FreeImage/PluginGIF.cpp"
"src/FreeImage/PluginICO.cpp"
"src/FreeImage/PluginJPEG.cpp"
"src/FreeImage/PluginPNG.cpp"
"src/FreeImage/Conversion.cpp"
"src/FreeImage/Conversion16_555.cpp"
"src/FreeImage/Conversion16_565.cpp"
"src/FreeImage/Conversion24.cpp"
"src/FreeImage/Conversion32.cpp"
"src/FreeImage/Conversion4.cpp"
"src/FreeImage/Conversion8.cpp"
"src/FreeImage/ConversionRGBF.cpp"
"src/FreeImage/ConversionType.cpp"
"src/FreeImage/Halftoning.cpp"
"src/FreeImageToolkit/MultigridPoissonSolver.cpp"
"src/FreeImage/tmoColorConvert.cpp"
"src/FreeImage/tmoDrago03.cpp"
"src/FreeImage/tmoFattal02.cpp"
"src/FreeImage/tmoReinhard05.cpp"
"src/FreeImage/ToneMapping.cpp"
"src/FreeImage/NNQuantizer.cpp"
"src/FreeImage/WuQuantizer.cpp"
"src/FreeImage/CacheFile.cpp"
"src/FreeImage/MultiPage.cpp"
"src/FreeImage/ZLibInterface.cpp"
"src/LibJPEG/jaricom.c"
"src/LibJPEG/jcarith.c"
"src/LibJPEG/jdarith.c"
"src/LibJPEG/jdhuff.c"
"src/Metadata/Exif.cpp"
"src/Metadata/FIRational.cpp"
"src/Metadata/FreeImageTag.cpp"
"src/Metadata/IPTC.cpp"
"src/Metadata/TagConversion.cpp"
"src/Metadata/TagLib.cpp"
"src/main.cpp"
"src/LibJPEG/jcapimin.c"
"src/LibJPEG/jcapistd.c"
"src/LibJPEG/jccoefct.c"
"src/LibJPEG/jccolor.c"
"src/LibJPEG/jcdctmgr.c"
"src/LibJPEG/jchuff.c"
"src/LibJPEG/jcinit.c"
"src/LibJPEG/jcmainct.c"
"src/LibJPEG/jcmarker.c"
"src/LibJPEG/jcmaster.c"
"src/LibJPEG/jcomapi.c"
"src/LibJPEG/jcparam.c"
"src/LibJPEG/jcprepct.c"
"src/LibJPEG/jcsample.c"
"src/LibJPEG/jctrans.c"
"src/LibJPEG/jdapimin.c"
"src/LibJPEG/jdapistd.c"
"src/LibJPEG/jdatadst.c"
"src/LibJPEG/jdatasrc.c"
"src/LibJPEG/jdcoefct.c"
"src/LibJPEG/jdcolor.c"
"src/LibJPEG/jddctmgr.c"
"src/LibJPEG/jdinput.c"
"src/LibJPEG/jdmainct.c"
"src/LibJPEG/jdmarker.c"
"src/LibJPEG/jdmaster.c"
"src/LibJPEG/jdmerge.c"
"src/LibJPEG/jdpostct.c"
"src/LibJPEG/jdsample.c"
"src/LibJPEG/jdtrans.c"
"src/LibJPEG/jerror.c"
"src/LibJPEG/jfdctflt.c"
"src/LibJPEG/jfdctfst.c"
"src/LibJPEG/jfdctint.c"
"src/LibJPEG/jidctflt.c"
"src/LibJPEG/jidctfst.c"
"src/LibJPEG/jidctint.c"
"src/LibJPEG/jmemmgr.c"
"src/LibJPEG/jmemnobs.c"
"src/LibJPEG/jquant1.c"
"src/LibJPEG/jquant2.c"
"src/LibJPEG/jutils.c"
"src/LibJPEG/rdbmp.c"
"src/LibJPEG/rdcolmap.c"
"src/LibJPEG/rdgif.c"
"src/LibJPEG/rdppm.c"
"src/LibJPEG/rdrle.c"
"src/LibJPEG/rdswitch.c"
"src/LibJPEG/rdtarga.c"
"src/LibJPEG/transupp.c"
"src/LibJPEG/wrbmp.c"
"src/LibJPEG/wrgif.c"
"src/LibJPEG/wrppm.c"
"src/LibJPEG/wrrle.c"
"src/LibJPEG/wrtarga.c"
"src/LibPNG/png.c"
"src/LibPNG/pngerror.c"
"src/LibPNG/pngget.c"
"src/LibPNG/pngmem.c"
"src/LibPNG/pngpread.c"
"src/LibPNG/pngread.c"
"src/LibPNG/pngrio.c"
"src/LibPNG/pngrtran.c"
"src/LibPNG/pngrutil.c"
"src/LibPNG/pngset.c"
"src/LibPNG/pngtrans.c"
"src/LibPNG/pngwio.c"
"src/LibPNG/pngwrite.c"
"src/LibPNG/pngwtran.c"
"src/LibPNG/pngwutil.c"
"src/FreeImageToolkit/BSplineRotate.cpp"
"src/FreeImageToolkit/Channels.cpp"
"src/FreeImageToolkit/ClassicRotate.cpp"
"src/FreeImageToolkit/Colors.cpp"
"src/FreeImageToolkit/CopyPaste.cpp"
"src/FreeImageToolkit/Display.cpp"
"src/FreeImageToolkit/Flip.cpp"
"src/FreeImageToolkit/JPEGTransform.cpp"
"src/FreeImageToolkit/Rescale.cpp"
"src/FreeImageToolkit/Resize.cpp"
)
include_directories("src" "src/FreeImage" "src/FreeImageToolkit" "src/LibJPEG"
"src/LibPNG" "src/Metadata" "${CMAKE_SOURCE_DIR}/libs/zLib/src")
set(TARGET AdvaImg)
include(${CMAKE_SOURCE_DIR}/cmake/plugin.cmake)

target_link_libraries(${TARGET} Zlib)
set_target_properties(${TARGET} PROPERTIES COMPILE_DEFINITIONS "FREEIMAGE_EXPORTS")