file(GLOB SOURCES "src/*.h" "src/*.cpp" "res/*.rc")
set(TARGET Jabber)
include_directories(${CMAKE_SOURCE_DIR}/libs/libsignal/src)
include(${CMAKE_SOURCE_DIR}/cmake/plugin.cmake)
target_link_libraries(${TARGET} Zlib FreeImage libsignal ${OPENSSL_LIBRARIES} comctl32.lib UxTheme.lib ws2_32.lib)
add_subdirectory(jabber_xstatus)
add_subdirectory(proto_jabber)