add_subdirectory(stdauth)
add_subdirectory(stdcrypt)
add_subdirectory(stdssl)
add_subdirectory(stdclist)
add_subdirectory(stduserinfo)
add_subdirectory(stdemail)
add_subdirectory(stdfile)
add_subdirectory(stdhelp)
add_subdirectory(stduihist)
add_subdirectory(stdidle)
add_subdirectory(stdautoaway)
add_subdirectory(stduseronline)
add_subdirectory(stdaway)
add_subdirectory(stdmsg)