add_subdirectory(stdautoaway)
add_subdirectory(stdaway)
add_subdirectory(stdclist)
add_subdirectory(stdcrypt)
add_subdirectory(stdemail)
add_subdirectory(stdfile)
add_subdirectory(stdmsg)
add_subdirectory(stdpopup)
add_subdirectory(stduihist)
add_subdirectory(stduserinfo)
add_subdirectory(stduseronline)