file(GLOB SOURCES "src/*.h" "src/*.cpp" "res/*.rc")
if(CMAKE_CL_64)
	list(APPEND SOURCES "src/mir_app64.def")
else()
	list(APPEND SOURCES "src/mir_app.def")
endif()
set(TARGET mir_app)
string(REPLACE "/EHsc" "" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
include(${CMAKE_SOURCE_DIR}/cmake/lib.cmake)
target_link_libraries(${TARGET} Zlib FreeImage UxTheme.lib ws2_32.lib ${PREBUILT_DIR}/mir_core.lib ${PREBUILT_DIR}/libcrypto.lib)
set_target_properties(${TARGET} PROPERTIES COMPILE_DEFINITIONS "MIR_APP_EXPORTS")