AC_INIT(src/ekhtml.c)
EKHTML_VER_MAJOR=0
EKHTML_VER_MINOR=3
EKHTML_VER_BUGFIX=2
AC_DEFINE_UNQUOTED(EKHTML_VER_MAJOR,$EKHTML_VER_MAJOR)
AC_DEFINE_UNQUOTED(EKHTML_VER_MINOR,$EKHTML_VER_MINOR)
AC_DEFINE_UNQUOTED(EKHTML_VER_BUGFIX,$EKHTML_VER_BUGFIX)
AM_INIT_AUTOMAKE(ekhtml,$EKHTML_VER_MAJOR.$EKHTML_VER_MINOR.$EKHTML_VER_BUGFIX)
AM_CONFIG_HEADER(include/ekhtml_config.h:config.in)

AC_PROG_CC
AC_C_INLINE
AM_PROG_LIBTOOL

EK_MAINTAINER_MODE

AC_OUTPUT(
        Makefile 
        docs/Doxyfile 
        docs/Makefile
        include/Makefile
        src/Makefile
        testsuite/Makefile 
)
