set(TARGET glib)
add_library(${TARGET}
"garray.c"
"gasyncqueue.c"
"gatomic.c"
"gbacktrace.c"
"gbase64.c"
"gbitlock.c"
"gbookmarkfile.c"
"gbuffer.c"
"gcache.c"
"gchecksum.c"
"gcompletion.c"
"gconvert.c"
"gdataset.c"
"gdate.c"
"gdatetime.c"
"gdir.c"
"gerror.c"
"gfileutils.c"
"ghash.c"
"ghook.c"
"ghostutils.c"
"giochannel.c"
"giowin32.c"
"gkeyfile.c"
"glist.c"
"gmain.c"
"gmappedfile.c"
"gmarkup.c"
"gmem.c"
"gmessages.c"
"gnode.c"
"gnulib/asnprintf.c"
"gnulib/printf-args.c"
"gnulib/printf-parse.c"
"gnulib/printf.c"
"gnulib/vasnprintf.c"
"goption.c"
"gpattern.c"
"gpoll.c"
"gprimes.c"
"gprintf.c"
"gqsort.c"
"gqueue.c"
"grand.c"
"gregex.c"
"grel.c"
"gscanner.c"
"gsequence.c"
"gshell.c"
"gslice.c"
"gslist.c"
"gspawn-win32-helper.c"
"gspawn-win32.c"
"gstdio.c"
"gstrfuncs.c"
"gstring.c"
"gtestutils.c"
"gthread.c"
"gthreadpool.c"
"gtimer.c"
"gtimezone.c"
"gtree.c"
"gunibreak.c"
"gunicollate.c"
"gunidecomp.c"
"guniprop.c"
"gurifuncs.c"
"gutf8.c"
"gutils.c"
"gvariant-core.c"
"gvariant-parser.c"
"gvariant-serialiser.c"
"gvariant.c"
"gvarianttype.c"
"gvarianttypeinfo.c"
"gwin32.c"
"libcharset/localcharset.c"
"libintl.c"
)
set_target_properties(${TARGET} PROPERTIES COMPILE_DEFINITIONS "GLIB_COMPILATION")